Fixed the tables's margin problem on mobile screens
.tables didn't have any spacing between the edge of the screen

--- a/web/css/pag_n_sort.css
+++ b/web/css/pag_n_sort.css
@@ -12,7 +12,7 @@ body{
     margin: 0 auto;
     width: 100%;
     font-size: 14px;
-    padding: 20px 0;
+    padding: 20px 10px;
 }
 .tablas h1{
     text-align: center;
